test_linux/t22/exp7.txt
Reading from file f7.pem...
Trying to parse input data against PEM rules
PEM block: [] (skipped: no PEM information)
Will use original data as pk input (assuming der-encoded content)
000000  2f                           00 1 01111
                                     ^^         Tag class:    0 -> Universal
                                        ^       Tag type:     1 -> Constructed
                                          ^^^^^ Tag number:  15 -> (reserved)
000001  2a                           0 0101010
                                     ^          Len type: 0 -> ONE BYTE
                                       ^^^^^^^  Len: 42
000002  20                           00 1 00000
                                     ^^         Tag class:    0 -> Universal
                                        ^       Tag type:     0 -> Primitive
                                          ^^^^^ Tag number:   0 -> EOC
000003  64                           0 1100100
                                     ^          Len type: 0 -> ONE BYTE
                                       ^^^^^^^  Len: 100
000004  64 65 72 2e    63 20 2a 2f   der.  c */ 
00000c  0a 0a 2f 2a    20 50 61 72   ../*   Par 
000014  73 65 20 64    65 72 20 66   se d  er f 
00001c  69 6c 65 73    20 2a 2f 0a   iles   */. 
000024  0a 2f 2a 20    53 c3 a9 62   ./*   S..b 
00002c  61 73 74 69    65 6e 20 4d   asti  en M 
000034  69 6c 6c 65    74 2c 20 46   ille  t, F 
00003c  65 62 72 75    61 72 79 20   ebru  ary  
000044  32 30 31 35    20 2a 2f 0a   2015   */. 
00004c  0a 2f 2a 23    64 65 66 69   ./*#  defi 
000054  6e 65 20 44    45 42 55 47   ne D  EBUG 
00005c  2a 2f 0a 0a    23 69 6e 63   */..  #inc 
000064  6c 75 64 65                  lude       
Warning: primitive/constructed bit mismatch, enforcing primitive
Error: inconsistent items length, position: 104
